fix: dark mode issues

--- a/src/base/default.css
+++ b/src/base/default.css
@@ -15,7 +15,7 @@ a {
   }
 
   .nk-bg--color & {
-    color: var(--color--k-7);
+    color: var(--color--k-8);
 
     &:hover {
       color: var(--color--k-10);
