--- a/src/styling/background.css
+++ b/src/styling/background.css
@@ -4,10 +4,10 @@
 /* @import "../tokens/tokens--color.css"; */
 
 .nk-bg--opaque {
-  background: white;
+  background: var(--color--k-10);
 
   .nk-theme--dark & {
-    background-color: var(--color--k-2);
+    background-color: var(--color--k-9);
   }
 }
 
